--- a/notes/评价体系中的失真度.md
+++ b/notes/评价体系中的失真度.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 评价体系中的失真度
+---
+
 # 评价体系中的失真度
 
 Paul Graham的[一篇文章](http://paulgraham.com/lesson.html)给了我很大的启发。这篇文章主要讲述了校园评价体系给学生思维带来的扭曲及对学生日后工作产生的影响，最后作者给出的建议是要尽快的意识到这种扭曲的存在从而改变自己的做事方式。这篇文章比较让我震撼的地方是，它清晰系统地表述了我脑海中隐隐约约曾浮现过的观点。在高中上学时，高考成绩是评价我们上大学的入场券。而上了大学之后，绩点或考研成绩又代替高考成为升学的入场券。可以说，普通大学生的头二十多年时光里，被评判的标准很大一部分都是成绩、成绩还是成绩。在这个过程中，我隐约觉得，这种靠成绩评价学生的体系，其实是与现实脱节的也是扭曲的，但扭曲在什么地方，我以前也没想清楚也没再去细想。自从看了PG的文章我有点恍然大悟，其实这种评价体系扭曲的地方在于它所宣传要评价的指标与它实际在评价的指标是不匹配的，而这种不匹配的程度可以定义为失真度。这种失真可能会潜移默化地影响我们的做事方式。
